@startuml Class Diagram

package "Core Framework" {
  class Flask {
    + secret_key: str
    + config: dict
    + register_blueprint(bp)
    + run(host: str, port: int)
  }

  class SQLAlchemy {
    + Model: class
    + session: Session
  }

  class LoginManager {
    + init_app(app)
    + user_loader(func)
  }
}

package "Data Models" {
  class User {
    + id: str
    + username: str
    + password_hash: str
    + role: str
    + set_password(password)
    + check_password(password)
  }

  class Patient {
    + id: str
    + name: str
    + age: str
    + address: str
    + image_path: str
    + image_hash: str
    + face_encoding: bytes
    + user_id: str
  }

  class PatientDisease {
    + id: int
    + name: str
    + added_date: str
  }

  class Visit {
    + id: int
    + date: str
    + time: str
    + notes: str
  }

  class Appointment {
    + id: int
    + date: str
    + time: str
    + purpose: str
  }

  class Prescription {
    + id: int
    + medication: str
    + dosage: str
    + duration: str
    + notes: str
  }

  class LabTest {
    + id: int
    + name: str
    + date: str
    + notes: str
  }
}

package "Business Logic" {
  class DiseaseMatcher {
    - df: DataFrame
    - vectorizer: TfidfVectorizer
    - synonyms: dict
    + fit_from_csv(path)
    + match(symptoms: str): list
    + find_by_name(name: str): list
  }

  class AIClient {
    + api_key: str
    + model_name: str
    + generate_content(content): str
  }

  class RiskAnalyzer {
    + calculate_risks(patient): list
  }

  class PDFReportGenerator {
    + patient: Patient
    + generate(): BytesIO
  }
}

' Relationships
Flask --> SQLAlchemy : uses
Flask --> LoginManager : uses
User "1" -- "0..1" Patient : accounts
Patient "1" *-- "0..*" PatientDisease : has
Patient "1" *-- "0..*" Visit : has
Patient "1" *-- "0..*" Appointment : has
Patient "1" *-- "0..*" Prescription : has
Patient "1" *-- "0..*" LabTest : has

Flask --> DiseaseMatcher : integrates
Flask --> AIClient : integrates
Flask --> RiskAnalyzer : integrates
Flask --> PDFReportGenerator : integrates

@enduml
